# IntelligileOpenGL

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  README.md  main.cpp  structure.puml
.github/workflows/: cmake.yml
Libraries/glad/: CMakeCache.txt  cmake_install.cmake
Libraries/glad/src/: glad.c
Libraries/glfw/examples/: boing  cmake_install.cmake  gears  heightmap  offscreen  particles  sharing  splitview  triangle-opengl  triangle-opengles  wave  windows
Libraries/glfw/src/: cmake_install.cmake  cmake_uninstall.cmake
Libraries/glfw/src/src/: cmake_install.cmake
Libraries/include.bak/glad/: glad.h
src/: main.cpp  util.cpp  util.hpp
src/gdi/: Color.cpp  Color.hpp  Context.hpp  Drawable.hpp  GObject.cpp  GObject.hpp  GView.cpp  GView.hpp  Point.hpp
src/shapes/: Rectangle.cpp  Rectangle.hpp  Shape.cpp  Shape.hpp  Square.cpp  Square.hpp
